# rust-fundamentals

examples/my_project/: Cargo.toml
examples/my_project/src/: main.rs
