[package]
name = "my_project"
version = "0.1.0"
authors = ["John Kintzele <john@kintzele.com>"]
edition = "2021"
description = "A simple Rust project demonstrating cargo.toml usage"
license = "MIT"
repository = "https://github.com/kintzele/my_project"

[dependencies]
serde = "~1.0.217"
reqwest = { version = "0.12.12", features = ["json"] }

[dev-dependencies]
rand = "0.9.0"
mockito ="1.6.1"

# [profile.release]
# opt-level = 3